[package]
name = "mayoos"
version = "0.1.0"
authors = ["DarcJC <me@darc.pro>"]
edition = "2018"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[package.metadata.bootimage]
# test-args = ["-device", "isa-debug-exit,iobase=0xf4,iosize=0x04",
#  "-nographic", "-curses", 
#  "-serial", "chardev:char1", 
#  "-chardev", "file,id=char1,path=testout"
# ]
test-args = [
    "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio",
    "-display", "none"
]
test-success-exit-code = 33  # (0x10 << 1) | 1
test-timeout = 120  # seconds

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bootloader = "0.9.0"
volatile = "0.2.3"
spin = "0.4.9"
x86_64 = "0.12.2"
uart_16550 = "0.2.10"

[dependencies.lazy_static]
version = "1.4.0"
features = ["spin_no_std"]
